[package]
name = "krunker-maze-generator"
version = "0.1.1"
edition = "2024"

authors     = ["Noah"]
description = "Generates mazes for Krunker maps"
license     = "MIT"
repository  = "https://github.com/Sorte1/krunker-maze-generator"
readme      = "README.md"
homepage    = "https://github.com/Sorte1/krunker-maze-generator"
keywords    = ["krunker", "maze", "generator"]
categories  = ["game-development", "command-line-utilities"]

[[bin]]
name = "krunker-maze-generator"
path = "src/main.rs"

[lib]
name = "krunker_maze_generator"
path = "src/lib.rs"

include = ["src/**", "Cargo.toml", "README.md", "LICENSE*"]

[dependencies]
rand = "0.9.0"
image = "0.25.5"
serde_json = "1.0.139"
clap = { version = "4.5.31", features = ["derive"] }
